// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Avatar Matches snapshot when boolean prop "isOnline" is set to: "false" 1`] = `
<ForwardRef
  size="large"
>
  <Unknown
    size="large"
  />
  <ForwardRef
    alt="jest-auto-snapshots String Fixture"
    size="large"
    src="jest-auto-snapshots String Fixture"
    type="default"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Avatar Matches snapshot when passed all props 1`] = `
<ForwardRef
  size="large"
>
  <Unknown
    size="large"
  />
  <ForwardRef
    alt="jest-auto-snapshots String Fixture"
    size="large"
    src="jest-auto-snapshots String Fixture"
    type="default"
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Avatar Matches snapshot when passed only required props 1`] = `
<ForwardRef
  size="small"
>
  <ForwardRef
    alt="jest-auto-snapshots String Fixture"
    size="small"
    src="jest-auto-snapshots String Fixture"
    type="default"
  />
</ForwardRef>
`;
